css/sass/resume.scss
/* Fonts*/

@import 'https://fonts.googleapis.com/css?family=Raleway:400,400i,600';

@mixin raleway_medium {
  font-family: 'Raleway', 'raleway_medium', sans-serif;
  font-weight: 400;
}

@mixin raleway_medium_italic {
  @include raleway_medium;
  text-transform: italic;
}

@mixin raleway_bold {
  font-family: 'Raleway', 'raleway_bold', sans-serif;
  font-weight: 600;
}

@mixin lato_medium {
  font-family: 'Lato', 'lato_medium', sans-serif;
  font-weight: 400;
}


/* Helpers */

b {
  @include raleway_bold;
}

i {
  @include raleway_medium_italic;
}

.text-left {
  text-align: left;
}

.text-right {
  text-align: right;
}


/* Styles */

head, body {
  margin: 0;
  padding: 0;

  @include raleway_medium;
}

body {
  width: 850px;
}

body > div:not(:last-child) {
  margin-bottom: 0.5em;
}

#header {
  @include raleway_medium;

  text-align: center;

  .name {
    @include raleway_bold;
    text-transform: uppercase;
    font-size: 2em;
  }

  b {
    @include raleway_bold;
    text-transform: uppercase;
  }
}

.section {
  position: relative;

  div {
    vertical-align: top;
  }

  .header {
    border-bottom: 2px solid #000;
    margin-bottom: 2px;

    @include raleway_bold;
    text-transform: uppercase;
    font-size: 1.25em;
  }

  .half {
    width: 50%;

    display: inline-block;
  }

  .third {
    width: 100 / 3 * 1%;

    display: inline-block;
  }

  .quarter {
    width: 25%;

    display: inline-block;
  }
}

#coursework .third {
  font-size: 0.85em;
}

#skills .quarter, #experience, #projects {
  ul {
    margin: 0.25em 0 0 0;
    padding-left: 20px;
  }
}

#experience, #projects {
  ul:not(:last-child) {
    margin-bottom: 0.5em;
  }
}

